fix(weather): fix text align

--- a/app/function/weather/weather.scss
+++ b/app/function/weather/weather.scss
@@ -421,6 +421,7 @@ $asset-url: "https://mp.innenu.com/";
   height: 400px;
 
   background-color: var(--bg-color-block);
+  text-align: center;
 
   .item {
     display: flex;
